docs(bench): certify native Q8 RAG